# dirclass

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  python-build.yml  python-publish.yml
dirclass/: __init__.py  core.py
