[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirclass"
version = "0.1.0"
authors = [
  {name = "Rongxin Ouyang", email = "rongxin@u.nus.edu"}]
description = "Treat a directory like a dataclass for recursive file listing and reading."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["files", "directories", "dataclass", "recursion", "utilities"]
license-files = ["LICENSE*"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
]